5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1618_2931.log
== TEST (2019-04-02 11:03:17) 
-- CODE:
import math from *
h = float(input("Insira a altura do objeto: "))
g = 9.81

v = (2*g*h)**0.5

print(v)
-- ERROR:
File "XXXX", line 1
    import math from *
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:04:01) 
-- CODE:

h = float(input("Insira a altura do objeto: "))
g = 9.81

v = (2*g*h)**0.5

print(v)
-- OUTPUT:
54.753410852658305
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:05:58) 
-- CODE:
from math import *
h = float(input("Insira a altura do objeto: "))     # h = altura
g = 9.81                                            # g = aceleracao da gravidade

v = (2*g*h)**0.5                                    # v = formula

print(v)
-- OUTPUT:
54.753410852658305
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:06:11) 
-- CODE:
from math import *
h = float(input("Insira a altura do objeto: "))     # h = altura
g = 9.81                                            # g = aceleracao da gravidade

v = (2*g*h)**0.5                                    # v = formula

print(v)
-- OUTPUT:
54.753410852658305
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:11:16) 
-- CODE:
from math import *
h = float(input("Insira a altura do objeto: "))     # h = altura
g = 9.81                                            # g = aceleracao da gravidade

v = (2*g*h)**0.5                                    # v = formula

print(v)
-- EXECUTION TIME:
0.201175
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.753410852658305
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.8898366502273
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.785246276190943
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
